--- a/style.css
+++ b/style.css
@@ -95,4 +95,21 @@ main {
             
         }
     }
+
+    button {
+        background: var( --color-brand);
+        border: none;
+        color: var(--always-white);
+        width: 100%;
+        padding: 1rem 2.4rem;
+        font-size: 1.6rem;
+        line-height: 2rem;
+        border-radius: 1.2rem;
+        font-weight: 600;
+        cursor: pointer;
+
+        %::houver {
+            background: var(--color-brand-houver) ;
+        }
+    }
 }
