--- a/style.css
+++ b/style.css
@@ -170,7 +170,42 @@ main {
                     img {
                         width: 1.6rem;
                         opacity: 0.7;
+        
+        
                     }
-                }
+         
+               
+         }
+    }
+}
+
+.warnig {
+    background: var(--color-danger);
+    color: var(--always-white);
+    padding: 1.2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 1.2rem;
+    margin-top: 2.4rem;
+    opacity: 1;
+    transform: translatey(0);
+    transition: opacity 0.4s ease, transform 0.4s ease;
+
+    div {
+        display: flex;
+        align-items: center;
+        gap: 0.8rem;
+
+    }
+
+    i{
+        font-size: 2rem;
+
+    }
+    button{
+        border: none;
+        background: none;
+        color: var(--always-white);
     }
 }
