criaçao da funçao addhidewarningclass para dar funçao ao botao x que esta na div warning

--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ main {
         border: none;
         background: none;
         color: var(--always-white);
+        cursor: pointer;
     }
 }
 
